# quarto-project-template

./: .gitignore  AGENTS.md  README.md  _quarto.yml  pyproject.toml
manuscript/: 1-intro.qmd  1-intro.tex  2-theory.qmd  2-theory.tex  3-methods.qmd  3-methods.tex  4-results.qmd  4-results.tex  5-discussion.qmd  5-discussion.tex  main.qmd  main.tex  references.bib  submission.qmd
notebooks/: example-notebook.qmd
output/tables/: tab-example.csv  tab-example.tex
scripts/: run_analysis.py
