[project]
name = "quarto-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyprojroot>=0.3.0",
    "scipy>=1.15.2",
]
